--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datetime-round",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Rounding off datetime to perfect time interval",
   "main": "index.js",
   "directories": {
@@ -32,9 +32,9 @@
   "homepage": "https://github.com/arshadkazmi42/datetime-round#readme",
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^5.2.0",
     "eslint": "^5.11.1",
-    "eslint-config-strongloop": "^2.1.0"
+    "eslint-config-strongloop": "^2.1.0",
+    "mocha": "^5.2.0"
   },
   "dependencies": {
     "moment": "^2.24.0"
